* introduced InterfaceDetector for custom auto export scenarios
* deprecated AutoExport in favour of DefaultInterfaceDetector enum
* deprecated Cardinality class in favour of Availability enum
* improved laziness of the backing service retrieval
* added 'sticky' option on single importers to prevent rebinds if higher ranking services appear while the backing
  service is still alive
* deprecated ExportContextClassLoader in favour of ExportContextClassLoaderEnum
* deprecated ImportContextClassLoader in favour of ImportContextClassLoaderEnum
* service collection can now contain service references instead of just service proxies
* service exporter returns a 'safe' service registration that forbids unregistration
* added new custom callback signature to service importer and exporter listeners
* enforced precedence of framework defined properties over user defined ones
* eliminated generated name property for inner/anonymous beans
* fixed reference collection listener behaviour by invoking the callbacks before items are removed from the collection
* fixed service registration listener behaviour by invoking the callbacks before the service gets unregistered
* improved proxy class generation to avoid introspection problems in concurrent environments
* changed behaviour for mandatory services to retrieve the backing service only when a method is being invoked
* removed mandatory service check for service collection to allow status checks
* added interface-less importers (useful for OSGi 4.2 remote services)
* improved detection of transitive dependencies when traversing nested beans
* added cleanup for services on destruction to avoid postponing bundle shutdown
* improved static service importers by adding caching of the service to ease service cleanup
* added 'cache target' option on service exporter for compatible behaviour with OSGi 4.2 Blueprint spec

Package org.springframework.osgi.mock
* added specific OSGi r4.2 methods

Package org.springframework.osgi.util