@@ -1,12 +1,12 @@
 http\://www.springframework.org/schema/osgi/spring-osgi-1.0.xsd=org/springframework/osgi/config/spring-osgi-1.0.xsd
 http\://www.springframework.org/schema/osgi/spring-osgi-1.1.xsd=org/springframework/osgi/config/spring-osgi-1.1.xsd
 http\://www.springframework.org/schema/osgi/spring-osgi-1.2.xsd=org/springframework/osgi/config/spring-osgi-1.2.xsd
-http\://www.springframework.org/schema/osgi/spring-osgi-2.0.xsd=org/springframework/osgi/config/spring-osgi-2.0.xsd
-http\://www.springframework.org/schema/osgi/spring-osgi.xsd=org/springframework/osgi/config/spring-osgi-2.0.xsd
+http\://www.springframework.org/schema/osgi/spring-osgi-2.0-m1.xsd=org/springframework/osgi/config/spring-osgi-2.0-m1.xsd
+http\://www.springframework.org/schema/osgi/spring-osgi.xsd=org/springframework/osgi/config/spring-osgi-2.0-m1.xsd
 http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-1.0.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.0.xsd
 http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-1.1.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.1.xsd
 http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-1.2.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-1.2.xsd
-http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-2.0.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-2.0.xsd
-http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-2.0.xsd
+http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium-2.0-m1.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-2.0-m1.xsd
+http\://www.springframework.org/schema/osgi-compendium/spring-osgi-compendium.xsd=org/springframework/osgi/compendium/config/spring-osgi-compendium-2.0-m1.xsd
 # Blueprint namespaces
 http\://www.osgi.org/xmlns/blueprint/v1.0.0/blueprint.xsd=org/springframework/osgi/blueprint/config/blueprint-1.0.xsd
